# auspex2

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml
auspex2/: __main__.py  api.py  cache.py  colors.py  cve.py  main.py  models.py  npmath.py  plots.py  report.py  tables.py  text.py  types.py  utils.py
auspex2/harbor/: __init__.py  api.py  artifact.py
auspex2/html/: base.html  cve.py  html.py  layout.py  pages.py  plots.html  tables.html
auspex2/html/static/: stylesheet.css
auspex2/html/templates/: base.html  error.html  navbar.html  plots.html  projects.html  report.html  tables.html
auspex2/html/templates/macros/: plots.j2  tables.j2
auspex2/models/: __init__.py
auspex2/plots/: __init__.py  models.py  plots.py
auspex2/report/: __init__.py  layout.py  report.py  section.py  text.py
auspex2/report/plots/: __init__.py  models.py  plots.py
auspex2/report/tables/: __init__.py  models.py  tables.py
auspex2/tables/: models.py  tables.py
tests/: test_auspex2.py  test_text.py
