[tool.poetry]
name = "auspex2"
version = "0.1.0"
description = ""
authors = ["Peder Hovdan Andresen <pederhan@usit.uio.no>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.1"
harborapi = { git = "https://github.com/pederhan/harborapi.git", rev = "main" }
loguru = "^0.6.0"
sanitize-filename = "^1.2.0"
bokeh = "^2.4.3"
pandas = "^1.4.3"
colorcet = "^3.0.0"
fastapi = "^0.79.0"
redis = "^4.3.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.971"
black = "^22.6.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
